create layouts and components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workflow App</title>
   </head>
-  <body>
-    <div id="root" class="min-h-screen bg-gradient-to-r from-[#DAD299] to-[#B0DAB9] font-mono min-w-full"></div>
+  <body >
+    <div id="root" class="min-h-screen bg-gradient-to-b from-[#DAD299] to-[#B0DAB9] font-mono min-w-full" style="padding: 0;" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
