create theme add axios and fix wrong bind mount

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Workflow App</title>
   </head>
   <body >
-    <div id="root" class="min-h-screen bg-gradient-to-b from-[#DAD299] to-[#B0DAB9] font-mono min-w-full" style="padding: 0;" ></div>
+    <div id="root" class="min-h-screen bg-gradient-to-b from-primary to-accent font-mono min-w-full" style="padding: 0;" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
