add create workflow modal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     <title>Workflow App</title>
   </head>
   <body >
+    
+    <div id="modal-root"></div>
     <div id="root" class="min-h-screen bg-gradient-to-b from-primary to-accent font-mono min-w-full" style="padding: 0;" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
